--- a/webauthn-server-demo/src/main/webapp/css/bootstrap-yubico.css
+++ b/webauthn-server-demo/src/main/webapp/css/bootstrap-yubico.css
@@ -26,7 +26,7 @@ p>small>strong{
 
 h1 {
   color: white;
-  background: linear-gradient(to right, #8cc041 0%,#9ed351 100%);
+  background: linear-gradient(to right, #5bc0de 0%,#9ed351 100%);
   background-color: #8bc041;
   font-size: 24px;
   text-transform: uppercase;
